--- a/src/styles/core/tools/_interactive.scss
+++ b/src/styles/core/tools/_interactive.scss
@@ -14,8 +14,8 @@
   backdrop-filter: blur(0.25rem);
   -webkit-transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
   transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
-  -webkit-transition: all transition-timing(regular) ease-out;
-  transition: all transition-timing(regular) ease-out;
+  -webkit-transition: color transition-timing(regular) ease-in-out, transform transition-timing(regular) ease-in-out;
+  transition: color transition-timing(regular) ease-in-out, transform transition-timing(regular) ease-in-out;
 
   &::-moz-focus-inner {
     border: 0;
@@ -25,11 +25,11 @@
     content: '';
     position: absolute;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
     z-index: 0; /* Puts the gradient below all content by default. */
     opacity: 0.25;
-    width: 100%;
-    height: 100%;
     pointer-events: none;
     background:
       linear-gradient(216deg, hsla(var(--#{$ns}-color-red-light), .6), hsla(var(--#{$ns}-color-red-light), 0) 70.71%),
